--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node .",
     "dev": "ts-node-dev src/bin/start.ts",
     "pretest": "npm run compile",
-    "test": "mocha dist/tests/*.test.js"
+    "test": "env NODE_ENV=test mocha dist/tests/*.test.js"
   },
   "repository": {
     "type": "git",
